[gd_scene load_steps=11 format=3 uid="uid://bimfl7htky20c"]

[ext_resource type="Texture2D" uid="uid://4xwdxvfusrx4" path="res://Imports/screen.png" id="1_owg42"]
[ext_resource type="Script" path="res://Scripts/intro_manager.gd" id="2_k8noo"]

[sub_resource type="Animation" id="Animation_gyqds"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line1:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Line2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Line3:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Line4:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PressToContinue:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Type:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yd7kg"]
resource_name = "continue"
length = 1.75
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressToContinue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.156863), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n22xb"]
resource_name = "onload"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Type:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5, 2.25, 3, 3.75, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_textdelay"
}]
}

[sub_resource type="Animation" id="Animation_ssjeu"]
resource_name = "show1"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line1:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_textdelay"
}]
}

[sub_resource type="Animation" id="Animation_j0nll"]
resource_name = "show2"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_textdelay"
}]
}

[sub_resource type="Animation" id="Animation_7u7p0"]
resource_name = "show3"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line3:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_textdelay"
}]
}

[sub_resource type="Animation" id="Animation_p3r0u"]
resource_name = "show4"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line4:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_textdelay"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqpa0"]
_data = {
"RESET": SubResource("Animation_gyqds"),
"continue": SubResource("Animation_yd7kg"),
"onload": SubResource("Animation_n22xb"),
"show1": SubResource("Animation_ssjeu"),
"show2": SubResource("Animation_j0nll"),
"show3": SubResource("Animation_7u7p0"),
"show4": SubResource("Animation_p3r0u")
}

[node name="Introduction" type="Sprite2D"]
position = Vector2(576, 324)
texture = ExtResource("1_owg42")

[node name="IntroManager" type="Node" parent="."]
script = ExtResource("2_k8noo")

[node name="TextAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pqpa0")
}

[node name="Type" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -587.0
offset_top = -575.0
offset_right = -565.0
offset_bottom = -551.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.72549, 0.72549, 0.72549, 1)
theme_override_font_sizes/normal_font_size = 24
text = "|"

[node name="Line1" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1058.0
offset_top = -246.0
offset_right = -94.0
offset_bottom = -208.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.724643, 0.724643, 0.724642, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]You are an engineer en route to Proxima Centauri B.[/center]"
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_lock_ = true

[node name="Line2" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1014.0
offset_top = -151.0
offset_right = -138.0
offset_bottom = -100.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.724643, 0.724643, 0.724642, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Your spaceship has unexpectedly broken down,[/center] 
[center]stranding you in vast nothingness.[/center]"
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_lock_ = true

[node name="Line3" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1025.0
offset_top = -40.0
offset_right = -127.0
offset_bottom = 11.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.724643, 0.724643, 0.724642, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]It is up to you to travel across your vessel and[/center]
[center]restore it for your journey.[/center]"
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_lock_ = true

[node name="Line4" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -862.0
offset_top = 56.0
offset_right = -290.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.724643, 0.724643, 0.724642, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Your team is depending on you.[/center]"
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_lock_ = true

[node name="PressToContinue" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -827.5
offset_top = -410.0
offset_right = -324.5
offset_bottom = -386.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0.724643, 0.724643, 0.724642, 1)
theme_override_font_sizes/normal_font_size = 24
text = "Press [SPACE] to continue."
metadata/_edit_lock_ = true

[node name="TextDelay" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="TextDelay" to="IntroManager" method="_on_text_delay_timeout"]
